Cherry-pick: Always create inverted index during segment creation (apache/pinot#17951) (#199)
* Always create inverted index during segment creation (#17951)

(cherry picked from commit 17ba6d46381e656f91cfb4a3e7eb5878e4aa2799)

* Fix SegmentPurgerTest compile error after #17951 cherry-pick

The upstream cherry-pick removed `import java.util.Collections;` because
OSS replaced the only callsite (`Collections.singletonList(D1)`) with
`List.of(D1)`. The LinkedIn fork has a second callsite at line 135
(LI-specific code that isn't in upstream) that still used
`Collections.singletonList(STAR_TREE_CONFIG_A)`, breaking the build.

Replaced with `List.of(...)` to match the OSS style and avoid re-adding
the now-unused-elsewhere Collections import.

---------

Co-authored-by: Xiaotian (Jackie) Jiang <17555551+Jackie-Jiang@users.noreply.github.com>